--- a/index.html
+++ b/index.html
@@ -144,14 +144,23 @@
 
 
   // adicionar o layer (casos) ao mapa
-  var markers = L.markerClusterGroup();
+    var casosLayer = L.markerClusterGroup();
 
-  var casosLayer = L.markerClusterGroup(casosData, {
-      onEachFeature: function (feature, layer) {layer.bindPopup (feature.properties.1);}
-    });
+    for (var i = 0; i < casosData.features.length; i++) {
+      var feature = casosData.features[i];
+      var marker = L.marker(new L.LatLng(feature.geometry.coordinates[1], feature.geometry.coordinates[0]));
+      marker.bindPopup(feature.properties.name);
+      casosLayer.addLayer(marker);
+    }
   
-  markers.addLayer(casosLayer);
-  map.addLayer(markers);
+    //var markers = L.markerClusterGroup();
+
+  //var casosLayer = L.markerClusterGroup(casosData, {
+      //onEachFeature: function (feature, layer) {layer.bindPopup (feature.properties.1);}
+    //});
+  
+  //markers.addLayer(casosLayer);
+  //map.addLayer(markers);
   
 
   // adicionar o control da informacao
