--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       //onEachFeature: function (feature, layer) {layer.bindPopup (feature.properties.1);}
     //});
   
-  markers.addLayer(casosLayer);
+  //markers.addLayer(casosLayer);
   map.addLayer(markers);
   
 
