--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
 
 
   // adicionar o layer (casos) ao mapa
-  var markers = L.markerClusterGroup(casosData);
+  var markers = L.markerClusterGroup();
 
-  //var casosLayer = L.markerClusterGroup(casosData, {
-      //onEachFeature: function (feature, layer) {layer.bindPopup (feature.properties.1);}
-    //});
+  var casosLayer = L.markerClusterGroup(casosData, {
+      onEachFeature: function (feature, layer) {layer.bindPopup (feature.properties[1]);}
+    });
   
-  //markers.addLayer(casosLayer);
+  markers.addLayer(casosLayer);
   map.addLayer(markers);
   
 
