--- a/index.html
+++ b/index.html
@@ -144,14 +144,13 @@
 
 
   // adicionar o layer (casos) ao mapa
-  var markers = L.markerClusterGroup();
-
-  var casosLayer = L.geoJSON(casosData, {
+  var markers = L.geoJSON(casosData, {
       onEachFeature: function (feature, layer) {layer.bindPopup (feature.properties[1]);}
     });
+
+  var casosLayer = L.markerClusterGroup()
   
-  markers.addLayer(casosLayer);
-  map.addLayer(markers);
+  map.addLayer(casosLayer);
   
 
   // adicionar o control da informacao
