--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
 
   <title>Mapa Casos Covid</title>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-   integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-   crossorigin=""/>
-  <link rel="stylesheet" href="dist/MarkerCluster.css" crossorigin="">
-  <link rel="stylesheet" href="dist/MarkerCluster.Default.css" crossorigin="">
+  <link rel="stylesheet" href="js/leaflet.css"/>
+  <link rel="stylesheet" href="dist/MarkerCluster.css">
+  <link rel="stylesheet" href="dist/MarkerCluster.Default.css">
 
-  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-    integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-    crossorigin=""></script>
-  <script src="dist/leaflet.markercluster-src.js" crossorigin=""></script>
+  <script src="js/leaflet.js"></script>
+  <script src="dist/leaflet.markercluster-src.js"></script>
 
   <style>
     #map{ height: 90% }
