--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
            d > 3     ? '#fd8d3c' :
            d > 2     ? '#feb24c' :
            d > 1     ? '#fed976' :
-           d > 0.25  ? '#ffeda0' :
-                       '#ffffcc' ;
+           d > 0.25  ? '#ffeda0' : '#ffffcc' ;
   }
 
 
@@ -166,20 +165,27 @@
 
 
   // adicionar o control da legenda
-  var legend = L.control({position: 'bottomright'});
-  legend.onAdd = function (map) {
-    var div = L.DomUtil.create('div', 'info legend'),
-        grades = [0, 0.25, 1, 2, 3, 5, 7, 10],
-        labels = [];
-    // loop through our density intervals and generate a label with a colored square for each interval
-    for (var i = 0; i < grades.length; i++) {
-        div.innerHTML +=
-            '<i style="background:' + casospor10khabColor(grades[i] + 1) + '"></i> ' +
-            grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
-    }
-    return div;
-  };
-  legend.addTo(map);
+	const legend = L.control({position: 'bottomright'});
+
+	legend.onAdd = function (map) {
+
+		const div = L.DomUtil.create('div', 'info legend');
+		const grades = [0, 0.25, 1, 2, 3, 5, 7, 10];
+		const labels = [];
+		let from, to;
+
+		for (let i = 0; i < grades.length; i++) {
+			from = grades[i];
+			to = grades[i + 1];
+
+			labels.push(`<i style="background:${casospor10khabColor(from + 1)}"></i> ${from}${to ? `&ndash;${to}` : '+'}`);
+		}
+
+		div.innerHTML = labels.join('<br>');
+		return div;
+	};
+
+	legend.addTo(map);
 
 
   // adicionar o control da escala
