--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
   // adicionar o layer (casospor10khab) e as funcionalidades ao mapa
-  geojson = L.geoJson(casospor10khabData, {
+  casospor10khabLayer = L.geoJson(casospor10khabData, {
       style: casospor10khabStyle,
       onEachFeature: onEachFeature
     }).addTo(map);
@@ -198,7 +198,7 @@
 
   var overlayMaps = {
     "Casos": casosLayer,
-    "Casos por 10k hab": geojson
+    "Casos por 10k hab": casospor10khabLayer
   };
 
 
