--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
 		marker.bindPopup(title);
 		markers.addLayer(marker);
 	}
-   map.addLayer(markers);
+   casosLayer = markers
+   map.addLayer(casosLayer);
   
 
   // adicionar o control da informacao
