--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   };
 
   var overlayMaps = {
-    "Casos": markers,
+    "Casos": casosLayer,
     "Casos por 10k hab": casospor10khabLayer
   };
 
