--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   };
 
   var overlayMaps = {
-    "Casos": casosLayer,
+    //"Casos": casosLayer,
     "Casos por 10k hab": casospor10khabLayer
   };
 
