--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
 
 
   // adicionar o layer (casos) ao mapa
-  var marker = L.marker(casosData);
+  //var marker = L.marker(casosData);
 
-  var casosLayer = L.markerClusterGroup(marker, {
+  //var casosLayer = L.markerClusterGroup(marker, {
     });
   
-  map.addLayer(markers);
+  //map.addLayer(markers);
   
 
   // adicionar o control da informacao
@@ -195,7 +195,7 @@
   };
 
   var overlayMaps = {
-    "Casos": casosLayer,
+    //"Casos": casosLayer,
     "Casos por 10k hab": geojson
   };
 
