--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
 
   // adicionar o layer (casos) ao mapa
   var casosLayer = L.markerClusterGroup();
-  casosLayer.addLayer(L.geoJson(casosData));
+  casosLayer.addLayer(L.geoJson(casosData, {
+    pointToLayer: function (feature, latlng) {
+        return L.marker(latlng, { opacity: 0 });
+      }
+  }));
   map.addLayer(casosLayer);
   
 
