--- a/index.html
+++ b/index.html
@@ -144,13 +144,28 @@
 
 
   // adicionar o layer (casos) ao mapa
+ // var casosLayer = L.markerClusterGroup();
+ // casosLayer.addLayer(L.geoJson(casosData, {
+   // pointToLayer: function (feature, latlng) {
+      //  return L.marker(latlng, { opacity: 0 });
+    //  }
+  //}));
+//  map.addLayer(casosLayer);
+
   var casosLayer = L.markerClusterGroup();
-  casosLayer.addLayer(L.geoJson(casosData, {
-    pointToLayer: function (feature, latlng) {
-        return L.marker(latlng, { opacity: 0 });
-      }
-  }));
-  map.addLayer(casosLayer);
+casosLayer.addLayer(L.geoJson(casosData, {
+  pointToLayer: function (feature, latlng) {
+    var value = feature.properties["1"]; // Get the value from the column "1"
+    return L.marker(latlng, {
+      opacity: 0,
+      icon: L.divIcon({
+        className: "custom-marker",
+        html: "<span>" + value + "</span>"
+      })
+    });
+  }
+}));
+map.addLayer(casosLayer);
   
 
   // adicionar o control da informacao
