--- a/index.html
+++ b/index.html
@@ -152,17 +152,12 @@
   //}));
 //  map.addLayer(casosLayer);
 
-  var casosLayer = L.markerClusterGroup();
+var casosLayer = L.markerClusterGroup();
 casosLayer.addLayer(L.geoJson(casosData, {
   pointToLayer: function (feature, latlng) {
-    var value = feature.properties["1"]; // Get the value from the column "1"
-    return L.marker(latlng, {
-      opacity: 0,
-      icon: L.divIcon({
-        className: "custom-marker",
-        html: "<span>" + value + "</span>"
-      })
-    });
+    var value = feature.properties["1"]; // Get the value from the "1" column
+
+    return L.marker(latlng, { opacity: 0 }).bindTooltip(value.toString());
   }
 }));
 map.addLayer(casosLayer);
