--- a/index.html
+++ b/index.html
@@ -144,23 +144,13 @@
 
 
   // adicionar o layer (casos) ao mapa
- // var casosLayer = L.markerClusterGroup();
- // casosLayer.addLayer(L.geoJson(casosData, {
-   // pointToLayer: function (feature, latlng) {
-      //  return L.marker(latlng, { opacity: 0 });
-    //  }
-  //}));
-//  map.addLayer(casosLayer);
-
-var casosLayer = L.markerClusterGroup();
-casosLayer.addLayer(L.geoJson(casosData, {
-  pointToLayer: function (feature, latlng) {
-    var value = feature.properties["1"]; // Get the value from the "1" column
-
-    return L.marker(latlng, { opacity: 0 }).bindTooltip(value.toString());
-  }
-}));
-map.addLayer(casosLayer);
+  var casosLayer = L.markerClusterGroup();
+  casosLayer.addLayer(L.geoJson(casosData, {
+    pointToLayer: function (feature, latlng) {
+        return L.marker(latlng, { opacity: 0 });
+      }
+  }));
+  map.addLayer(casosLayer);
   
 
   // adicionar o control da informacao
